<resources>
    <string name="app_name">School</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="Register">Register</string>
    <string name="Acct_Question">Don\'t have an account?</string>
    <string name="Create_new_Account">Create new account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="Home">Home</string>
    <string name="Help">Search Any Book.</string>
    <string name="Send_verification_Code">Send Verification Code</string>
    <string name="Loading">Loading...</string>
    <string name="Active">Active:</string>
    <string name="title">Book App</string>
    <string name="Search">Search</string>
    <string name="Matric_No_title">Matric No / Application No</string>
    <string name="Email">Email Address</string>
    <string name="Password">Password</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="Find_Us">Find Us</string>
    <string name="Get_Help">Get Help</string>
    <string name="Retrive_Matric_No">Retrieve Matric No.</string>
    <string name="logoHead">Login</string>
    <string name="continueBtn">Create new account</string>
    <string name="description">Liable</string>
    <string name="Submit">Submit</string>
    <string name="LoginIfRemember">Provide your correct email address</string>
    <string name="Start_Registration">Start a Fresh Application</string>
    <string name="Student_Login">Student Login Portal</string>
    <string name="Pay_Fee">Pay Application Fee Online</string>
    <string name="requirement_view">Click To View Programmes Entry Requirements</string>
    <string name="Pay_Online_Title">Pay Online</string>
    <string name="empty"></string>
    <string name="Continue">Continue</string>
    <string name="Registration_Form_Title">Student Registration Form</string>
    <string name="state">State*</string>
    <string name="district">District*</string>
    <string name="submit">Submit</string>
    <string name="title_desc">Learning Multiple Spinners (Populating Second Spinner based on the Selection of First Spinner)
        <br/><br/> Using Names of Indian States in First Spinner.
        <br/> On selecting a State, Second Spinner is populated with the Names of Districts belonging to the selected State.
    </string>
    <string-array name="School_Application">
        <item>--Select--</item>
        <item>Distance Learning Institute</item>
        <item>Postgraduate</item>
        <item>Undergraduate</item>
    </string-array>
    <string-array name="DCL_Faculty_Array_List">
        <item>--Select--</item>
        <item>Faculty of Basic Medical Science (BMS)</item>
        <item>Faculty of  Public Health</item>
        <item>Faculty of Social Science</item>
        <item>Faculty of Engineering/Env</item>
        <item>Faculty of Education</item>
        <item>Faculty of Science</item>
        <item>Faculty of Art</item>
        <item>Faculty of Technology</item>
        <item>Faculty of Administrator</item>
    </string-array>
    <string-array name="Department_of_Basic_Medical_Science_DSL">
        <item>--Select--</item>
        <item>Anatomy</item>
        <item>Anaesthesia</item>
        <item>Chemical Pathology</item>
        <item>Community Medicine</item>
        <item>Dermatology</item>
        <item>Haematology and Immunology</item>
        <item>Medical Biochemistry</item>
        <item>Medical Microbiology</item>
        <item>Medicine</item>
        <item>Morbid Anatomy</item>
        <item>Obstetrics and Gynaecology</item>
        <item>Ophathalmology</item>
        <item>Otalaryngology</item>
        <item>Paediatrics</item>
        <item>Pharmachology and Therapeutics</item>
        <item>Physiology</item>
        <item>Radiation Medicine</item>
        <item>Surgery</item>
        <item>Psychological Medicine</item>
        <item>Child Dental Health</item>
    </string-array>
    <string-array name="department_of_Public_Health_DSL">
        <item>--Select--</item>
        <item>Community Medicine</item>
        <item>Environmental Health Sciences</item>
        <item>Epidemiology and Medical Statistics</item>
        <item>Health Promotion and Education</item>
        <item>Health Policy and Management</item>
        <item>Institute of Child Health</item>
        <item>Human Nutrition</item>
    </string-array>
    <string-array name="POST_Faculty_Array_List">
        <item>--Select--</item>
        <item>Faculty of Basic Medical Science (BMS)</item>
        <item>Faculty of Veterinary Medicine</item>
        <item>Faculty of Pharmacy</item>
        <item>Faculty of Education</item>
        <item>Faculty of Science</item>
        <item>Faculty of Art</item>
        <item>Faculty of Agriculture</item>
        <item>Faculty of Law</item>
    </string-array>
        <string-array name="UNDER_Faculty_Array_List">
            <item>--Select--</item>
            <item>Faculty of Basic Medical Science (BMS)</item>
            <item>Faculty of  Public Health</item>
            <item>Faculty of Social Science</item>
            <item>Faculty of Engineering/Env</item>
            <item>Faculty of Pharmacy</item>
            <item>Faculty of Education</item>
            <item>Faculty of Science</item>
            <item>Faculty of Art</item>
            <item>Faculty of Agriculture</item>
            <item>Faculty of Law</item>
            <item>Faculty of Technology</item>
            <item>Faculty of Administrator</item>
        </string-array>
    <string-array name="array_indian_states">
        <item>Select Your State</item>
        <item>Andaman and Nicobar Islands</item><item>Andhra Pradesh</item><item>Arunachal Pradesh</item><item>Assam</item>
        <item>Bihar</item><item>Chandigarh</item><item>Chhattisgarh</item><item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item><item>Delhi</item><item>Goa</item><item>Gujarat</item><item>Haryana</item>
        <item>Himachal Pradesh</item><item>Jammu and Kashmir</item><item>Jharkhand</item><item>Karnataka</item>
        <item>Kerala</item><item>Ladakh</item><item>Lakshadweep</item><item>Madhya Pradesh</item><item>Maharashtra</item>
        <item>Manipur</item><item>Meghalaya</item><item>Mizoram</item><item>Nagaland</item><item>Orissa</item>
        <item>Puducherry</item><item>Punjab</item><item>Rajasthan</item><item>Sikkim</item><item>Tamil Nadu</item>
        <item>Telangana</item><item>Tripura</item><item>Uttarakhand</item><item>Uttar Pradesh</item><item>West Bengal</item>
    </string-array>
    <string-array name="array_default_districts">
        <item>Select Your District</item>
    </string-array>
    <string-array name="array_default_faculty">
        <item>--Empty--</item>
    </string-array>
    <string-array name="select_any_faculty_first">
        <item>-Select Faculty First-</item>
    </string-array>
    <string-array name="Department_Under_Basic_Medical_Science_Under_DLI">
        <item>-Choose Department-</item>
        <item>Anatomy</item>
        <item>Petroleum and Gas Engineering</item>
        <item>Anaesthesia</item>
        <item>Chemical Pathology"</item>
        <item>Community Medicine</item>
        <item>Dermatology</item>
        <item>Haematology and Immunology</item>
        <item>Medical Biochemistry</item>
        <item>Medical Microbiology</item>
        <item>Medicine</item>
        <item>Morbid Anatomy</item>
        <item>Obstetrics and Gynaecology</item>
        <item>Ophathalmology</item>
        <item>Otalaryngology</item>
        <item>Paediatrics</item>
        <item>Pharmachology and Therapeutics</item>
        <item>Physiology</item>
        <item>Radiation Medicine</item>
        <item>Surgery</item>
        <item>Psychological Medicine</item>
        <item>Child Dental Health</item>
    </string-array>
    <string-array name="Department_Under_Public_Health_Under_DLI">
        <item>-Choose Department-</item>
        <item>Community Medicine</item>
        <item>Environmental Health Sciences</item>
        <item>Epidemiology and Medical Statistics</item>
        <item>Health Promotion and Education</item>
        <item>Health Policy and Management</item>
        <item>Institute of Child Health</item>
        <item>Human Nutrition</item>
    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        <item>Select Your District</item>
        <item>Anantapur</item><item>Chittoor</item><item>East Godavari</item><item>Guntur</item><item>Kadapa</item><item>Krishna</item>
        <item>Kurnool</item><item>Nellore</item><item>Prakasam</item><item>Srikakulam</item><item>Visakhapatnam</item><item>Vizianagaram</item><item>West Godavari</item>
    </string-array>
    <string-array name="array_arunachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Anjaw</item><item>Siang</item><item>Changlang</item><item>Dibang Valley</item><item>East Kameng</item><item>East Siang</item>
        <item>Kamle</item><item>Kra Daadi</item><item>Kurung Kumey</item><item>Lepa Rada</item><item>Lohit</item><item>Longding</item>
        <item>Lower Dibang Valley</item><item>Lower Siang</item><item>Lower Subansiri</item><item>Namsai</item><item>Pakke Kessang</item><item>Papum Pare</item>
        <item>Shi Yomi</item><item>Tawang</item><item>Tirap</item><item>Upper Siang</item><item>Upper Subansiri</item><item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="array_assam_districts">
        <item>Select Your District</item>
        <item>Bajali</item><item>Baksa</item><item>Barpeta</item><item>Biswanath</item><item>Bongaigaon</item><item>Cachar</item>
        <item>Charaideo</item><item>Chirang</item><item>Darrang</item><item>Dhemaji</item><item>Dhubri</item><item>Dibrugarh</item>
        <item>Dima Hasao</item><item>Goalpara</item><item>Golaghat</item><item>Hailakandi</item><item>Hojai</item><item>Jorhat</item>
        <item>Kamrup</item><item>Kamrup Metropolitan</item><item>Karbi Anglong</item><item>Karimganj</item><item>Kokrajhar</item><item>Lakhimpur</item>
        <item>Majuli</item><item>Morigaon</item><item>Nagaon</item><item>Nalbari</item><item>Sivasagar</item><item>Sonitpur</item>
        <item>South Salmara-Mankachar</item><item>Tinsukia</item><item>Udalguri</item><item>West Karbi Anglong</item>
    </string-array>
    <string-array name="array_bihar_districts">
        <item>Select Your District</item>
        <item>Araria</item><item>Arwal</item><item>Aurangabad</item><item>Banka</item><item>Begusarai</item><item>Bhagalpur</item>
        <item>Bhojpur</item><item>Buxar</item><item>Darbhanga</item><item>East Champaran</item><item>Gaya</item><item>Gopalganj</item>
        <item>Jamui</item><item>Jehanabad</item><item>Kaimur</item><item>Katihar</item><item>Khagaria</item><item>Kishanganj</item>
        <item>Lakhisarai</item><item>Madhepura</item><item>Madhubani</item><item>Munger</item><item>Muzaffarpur</item><item>Nalanda</item>
        <item>Nawada</item><item>Patna</item><item>Purnia</item><item>Rohtas</item><item>Saharsa</item><item>Samastipur</item>
        <item>Saran</item><item>Sheikhpura</item><item>Sheohar</item><item>Sitamarhi</item><item>Siwan</item><item>Supaul</item>
        <item>Vaishali</item><item>West Champaran</item>
    </string-array>
</resources>