<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login"
    android:background="@color/bg">


    <RelativeLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp">

        <ImageView
            android:id="@+id/item_touch_helper_previous_elevation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="2sp"
            android:layout_marginTop="15sp"
            android:contentDescription="@string/Home"
            android:src="@drawable/baseline_arrow_back_ios_24" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/Logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Header"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textAlignment="center">

        <TextView
            android:id="@+id/HeaderQuote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/retrieve_password"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="normal"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_below="@id/Logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:id="@+id/Userdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonRow"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="2dp"
                android:text="@string/Email"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:contentDescription="@string/description"
                android:textStyle="normal"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Email"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                app:boxStrokeColor="#fff"
                android:textColorHint="#fff"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/emailicon"
                    android:drawablePadding="2dp"
                    android:textColor="@color/white"
                    app:boxStrokeColor="@color/white"
                    android:hint="Email"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/LoginButtonSubmit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/white"
                android:textColorHint="@color/bg"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/Submit"
                android:textColor="@color/bg"
                app:textAllCaps="true"/>
            <RelativeLayout
                android:id="@+id/forgotOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LoginButtonSubmit"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:id="@+id/instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:text="@string/LoginIfRemember"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </RelativeLayout>
            <View
                android:id="@+id/SplitLine_hor1"
                android:layout_width="match_parent"
                android:layout_height= "2dp"
                android:background="@color/white" />
            <RelativeLayout
                android:id="@+id/CreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="@color/white"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:text="@string/continueBtn"
                    android:textColor="@color/bg"
                    />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>