<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Start">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:text="@string/empty"
            android:drawableStart="@drawable/logoimg"/>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="40dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:accessibilityTraversalBefore="@id/header">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginTop="52dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Start_New_Registration"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:drawableTop="@drawable/start_one"
                android:text="@string/Start_Registration"
                android:textColor="@color/bg"
                android:textSize="15sp"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="5dp"
                app:rippleColor="#33AAAAAA"
                app:strokeColor="@color/bg"
                app:strokeWidth="2dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Student_Login_Portal"
                android:layout_below="@+id/Start_New_Registration"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:drawableTop="@drawable/baseline_recycling_24"
                android:text="@string/Student_Login"
                android:textColor="@color/bg"
                android:textSize="15sp"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="5dp"
                app:rippleColor="#33AAAAAA"
                android:layout_marginTop="30dp"
                app:strokeColor="@color/bg"
                app:strokeWidth="2dp" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Make_Payment_Online"
                android:layout_below="@+id/Student_Login_Portal"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:drawableTop="@drawable/baseline_credit_card_24"
                android:text="@string/Pay_Fee"
                android:textColor="@color/bg"
                android:textSize="15sp"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="5dp"
                app:rippleColor="#33AAAAAA"
                android:layout_marginTop="30dp"
                app:strokeColor="@color/bg"
                app:strokeWidth="2dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/Review_Requirement"
                    android:layout_below="@+id/Make_Payment_Online"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="@color/btn_red"
                    android:textColorHint="@color/white"
                    android:gravity="center"
                    android:textSize="11dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/requirement_view"
                    android:textColor="@color/white"
                    app:textAllCaps="true"
                   />
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>